<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_schema2param</name>
  <version>1.0.0</version>
  <description>ROS2 JSON Schema to Parameter loader code generator - Automatically generates type-safe C++ parameter loading code from JSON Schema definitions</description>
  <maintainer email="owen@example.com">Owen</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  
  <build_depend>python3-jinja2</build_depend>
  <build_depend>python3-jsonschema</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
